--- a/src/app/_metronic/layout/components/header/navbar/navbar.component.html
+++ b/src/app/_metronic/layout/components/header/navbar/navbar.component.html
@@ -8,11 +8,11 @@
 <div class="app-navbar-item" [ngClass]="itemClass">
   <!--begin::Menu wrapper-->
   <div *ngIf="isDealer" class="cursor-pointer symbol" [ngClass]="userAvatarClass" data-kt-menu-trigger="{default: 'hover'}" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
-    <img src="./assets/media/avatars/300-3.jpg" />
+    <img src="./assets/media/avatars/blank.png" />
   </div>
 
   <div *ngIf="isAdmin" class="cursor-pointer symbol" [ngClass]="userAvatarClass" data-kt-menu-trigger="{default: 'hover'}" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
-    <img src=" " />
+    <img src="./assets/media/avatars/blank.png" />
   </div>
   <app-user-inner data-kt-menu='true'></app-user-inner>
   <!--end::Menu wrapper-->
